further attempt to fix the build